manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: httpbin
spec:
  type: ClusterIP
  selector:
    app: myapp
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
